fix: total price calculation, shoping-cart scrollbar. create closeOnEsc.derective

--- a/src/app/layout/components/shoping-cart/shoping-cart.component.scss
+++ b/src/app/layout/components/shoping-cart/shoping-cart.component.scss
@@ -45,12 +45,18 @@
     cursor: pointer;
   }
 
-  .product {
+  .product-list {
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding: 24px 0;
     font-size: 16px;
+    overflow: auto;
+    scroll-behavior: smooth;
+    max-height: 20rem;
+  }
+
+  .product {
 
     &__item {
       display: flex;
@@ -124,5 +130,28 @@
       display: flex;
       justify-content: space-between;
     }
+  }
+}
+
+.slide-in-top {
+  -webkit-animation: slide-in-top 0.6s cubic-bezier(0.10, 1.000, 0.2, 1.000) both;
+  animation: slide-in-top 0.6s cubic-bezier(0.1, 1.000, 0.2, 1.000) both;
+}
+
+@keyframes slide-in-top {
+  0% {
+    -webkit-transform: translateY(-1000px);
+    transform: translateY(-1000px);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    opacity: 1;
   }
 }
